PROJECT(osgCal)


SET( OSGCAL_DEBUG_POSTFIX "d" )
SET( CMAKE_DEBUG_POSTFIX ${OSGCAL_DEBUG_POSTFIX} )

SET( OSGCAL_INCLUDE_DIR ${osgCal_SOURCE_DIR}/include )
SET( OSGCAL_SOURCE_DIR  ${osgCal_SOURCE_DIR}/src )
SET( OSGCAL_BINARY_DIR  ${osgCal_BINARY_DIR})

SET( CMAKE_MODULE_PATH "${osgCal_SOURCE_DIR}/CMakeModules;${CMAKE_MODULE_PATH}")

INCLUDE(osgcalUtils)

FIND_PACKAGE(OSG)
FIND_PACKAGE(CAL3D)
FIND_PACKAGE(OPENTHREADS)
FIND_PACKAGE(OpenGL)

IF (NOT CAL3D_FOUND)
  MESSAGE(FATAL_ERROR "Unable to locate Cal3D libary")
ENDIF (NOT CAL3D_FOUND)

SET(WRAPPER_PREFIX  osgwrapper_)

ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(applications)
