
ADD_DEFINITIONS(-DOSGCAL_LIBRARY)


SET(TARGET_NAME osgCal)


SET(LIBRARY_OUTPUT_PATH ${OSGCAL_BINARY_DIR}/lib)

FILE(GLOB h_files ${OSGCAL_INCLUDE_DIR}/osgCal/*  )
FILE(GLOB cpp_files ${OSGCAL_SOURCE_DIR}/osgCal/*.cpp ${OSGCAL_SOURCE_DIR}/osgCal/shaders/*.h )
message(${cpp_files})

ADD_LIBRARY(${TARGET_NAME} SHARED ${BUILD_MODE} ${h_files} ${cpp_files})
OSGCAL_LINK_LIBRARIES( ${TARGET_NAME} osg osgUtil osgDB  OpenThreads cal3d )
TARGET_LINK_LIBRARIES(${TARGET_NAME} ${OPENGL_LIBRARIES} )

SET_TARGET_PROPERTIES(${TARGET_NAME} PROPERTIES PROJECT_LABEL "core_${TARGET_NAME}")

INSTALL(TARGETS ${TARGET_NAME} RUNTIME DESTINATION bin ARCHIVE DESTINATION lib LIBRARY DESTINATION bin )

