
ADD_DEFINITIONS(-DOSGCAL_LIBRARY)

SET(TARGET_NAME ${WRAPPER_PREFIX}osgCal)

MESSAGE(  ${OSGCAL_INCLUDE_DIR})
INCLUDE_DIRECTORIES(
  ${OSGCAL_INCLUDE_DIR}
  ${OSG_INCLUDE_DIR}
)

LINK_DIRECTORIES(
  ${OSG_LIBRARY_DIR}
)

SET(LIBRARY_OUTPUT_PATH ${OSGCAL_BINARY_DIR}/lib)

FILE(GLOB cpp_files ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp )

ADD_LIBRARY(${TARGET_NAME} ${BUILD_MODE} ${cpp_files})
OSGCAL_LINK_LIBRARIES(${TARGET_NAME} osg osgIntrospection)

INSTALL(TARGETS ${TARGET_NAME} RUNTIME DESTINATION bin ARCHIVE DESTINATION lib LIBRARY DESTINATION bin )

